tests/baselines/reference/restArgMissingName.errors.txt
==== tests/cases/compiler/restArgMissingName.ts (1 errors) ====
    function sum (...) {} 
                     ~
!!! restArgMissingName.ts(1,18): error TS1003: Identifier expected.
    